[package]
name = "connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arma-rs = "1.9.3"
reqwest = { version = "0.11", features = ["blocking"] }

[lib]
name = "connector"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true